<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_desc"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/frame" />

        <TextView
            android:id="@+id/nameVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_normal"
            android:paddingEnd="@dimen/space_normal"
            android:text="@string/val_name"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/nimVal"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nimVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_normal"
            android:paddingEnd="@dimen/space_normal"
            android:paddingBottom="@dimen/space_small"
            android:text="@string/val_identity_number"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="@dimen/space_normal"
        android:paddingEnd="@dimen/space_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/classTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_student_class"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/classValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_student_class"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/sexTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_sex"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/sexValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_sex"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />


            <TextView
                android:id="@+id/dobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_date_of_birth"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/dobValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_date_of_birth"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/addressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_address"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/addressValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_address"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/favoriteFoodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_favorite_food"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_favorite_food"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/favoriteDrinkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_favorite_drink"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_favorite_drink"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/hobbyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_hobby"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_hobby"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/favoriteSongTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_favorite_song"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_favorite_song"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/favoriteFilmTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_favorite_film"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_favorite_film"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/dreamJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/title_dream_job"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_dream_job"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>